--- a/index.html
+++ b/index.html
@@ -1,11 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Italiana&family=Niconne&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sree+Krushnadevaraya&display=swap');
+        
+        body {
+            font-family: "Inter", sans-serif;
+            background-color: #121213;
+        }
+
+        #instructions h1 {
+            font-weight:900;
+            font-size: 4em;
+            margin-bottom: 0.3em;
+        }
+
+        #instructions p {
+            font-size: 1.5em;
+            margin-bottom: 1.7em;
+        }
+
+        #instructions h3 {
+            font-weight: bold;
+            font-size: 1.5em;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <!-- card container -->
+    <main class="container-fluid d-flex justify-content-evenly align-items-center flex-wrap gap-5 mt-5"
+        style="height: 60vh; width: 60vw;" id="card-container">
+        <div class="card " style="width: 15vw; height: 18rem;">
+            <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
+                <img src="./sources/images/question-mark.png" alt="question-mark">
+            </div>
+        </div>
+        <div class="card " style="width: 15vw; height: 18rem;">
+            <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
+                <img src="./sources/images/question-mark.png" alt="question-mark">
+            </div>
+        </div>
+        <div class="card " style="width: 15vw; height: 18rem;">
+            <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
+                <img src="./sources/images/question-mark.png" alt="question-mark">
+            </div>
+        </div>
+        <div class="card " style="width: 15vw; height: 18rem;">
+            <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
+                <img src="./sources/images/question-mark.png" alt="question-mark">
+            </div>
+        </div>
+        <div class="card " style="width: 15vw; height: 18rem;">
+            <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
+                <img src="./sources/images/question-mark.png" alt="question-mark">
+            </div>
+        </div>
+        <div class="card " style="width: 15vw; height: 18rem;">
+            <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
+                <img src="./sources/images/question-mark.png" alt="question-mark">
+            </div>
+        </div>
+    </main>
+
+    <!-- modal -->
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+        Launch static backdrop modal
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-xl">
+            <div class="modal-content" id="instructions">
+                <div class="modal-body p-5 text-dark">
+                    <h1>How to Play</h1>
+                    <p>Flip two cards at a time to find matching pairs, match all pairs to win!</p>
+                    <h3>Select Level:</h3>
+                    <div class="d-flex gap-3 justify-content-evenly mt-4">
+                        <button type="button" class="btn p-3 text-light fw-bold" data-bs-dismiss="modal" style="width: 25%; background: #538D4E;">Close</button>
+                        <button type="button" class="btn p-3 text-light fw-bold" style="width: 25%; background: #F5B400;">Understood</button>
+                        <button type="button" class="btn p-3 text-light fw-bold" style="width: 25%; background: #DE0C0C;">Understood</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
