--- a/index.html
+++ b/index.html
@@ -7,73 +7,115 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Italiana&family=Niconne&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sree+Krushnadevaraya&display=swap');
-        
-        body {
-            font-family: "Inter", sans-serif;
-            background-color: #121213;
-        }
-
-        #instructions h1 {
-            font-weight:900;
-            font-size: 4em;
-            margin-bottom: 0.3em;
-        }
-
-        #instructions p {
-            font-size: 1.5em;
-            margin-bottom: 1.7em;
-        }
-
-        #instructions h3 {
-            font-weight: bold;
-            font-size: 1.5em;
-        }
-    </style>
+    <link rel="stylesheet" href="/sources/style.css">
 </head>
 
 <body>
     <!-- card container -->
-    <main class="container-fluid d-flex justify-content-evenly align-items-center flex-wrap gap-5 mt-5"
-        style="height: 60vh; width: 60vw;" id="card-container">
-        <div class="card " style="width: 15vw; height: 18rem;">
+    <!-- <main class="container d-flex justify-content-evenly align-items-center flex-wrap gap-5 bg-danger p-5 mt-5"
+         id="card-container">
+        mobile landscape
+        <div class="card ">
             <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
                 <img src="./sources/images/question-mark.png" alt="question-mark">
             </div>
         </div>
-        <div class="card " style="width: 15vw; height: 18rem;">
+        <div class="card" style="height: 20em; width: 15em">
             <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
                 <img src="./sources/images/question-mark.png" alt="question-mark">
             </div>
         </div>
-        <div class="card " style="width: 15vw; height: 18rem;">
+        <div class="card" style="height: 20em; width: 15em">
             <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
                 <img src="./sources/images/question-mark.png" alt="question-mark">
             </div>
         </div>
-        <div class="card " style="width: 15vw; height: 18rem;">
+        <div class="card" style="height: 20em; width: 15em">
             <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
                 <img src="./sources/images/question-mark.png" alt="question-mark">
             </div>
         </div>
-        <div class="card " style="width: 15vw; height: 18rem;">
+        <div class="card" style="height: 20em; width: 15em">
             <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
                 <img src="./sources/images/question-mark.png" alt="question-mark">
             </div>
         </div>
-        <div class="card " style="width: 15vw; height: 18rem;">
+        <div class="card" style="height: 20em; width: 15em">
             <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
                 <img src="./sources/images/question-mark.png" alt="question-mark">
+            </div>
+        </div>
+        <div class="card" style="height: 20em; width: 15em">
+            <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
+                <img src="./sources/images/question-mark.png" alt="question-mark">
+            </div>
+        </div>
+        <div class="card" style="height: 20em; width: 15em">
+            <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
+                <img src="./sources/images/question-mark.png" alt="question-mark">
+            </div>
+        </div>
+        <div class="card" style="height: 20em; width: 15em">
+            <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
+                <img src="./sources/images/question-mark.png" alt="question-mark">
+            </div>
+        </div>
+    </main> -->
+
+    <main class="container-md py-5" id="card-container">
+        <div class="row mb-5">
+            <div class="col d-flex justify-content-center">
+                <div class="card" style="height: 20em; width: 15em">
+                    <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
+                        <img src="./sources/images/question-mark.png" alt="question-mark">
+                    </div>
+                </div>
+            </div>
+            <div class="col d-flex justify-content-center">
+                <div class="card" style="height: 20em; width: 15em">
+                    <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
+                        <img src="./sources/images/question-mark.png" alt="question-mark">
+                    </div>
+                </div>
+            </div>
+            <div class="col d-flex justify-content-center">
+                <div class="card" style="height: 20em; width: 15em">
+                    <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
+                        <img src="./sources/images/question-mark.png" alt="question-mark">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col d-flex justify-content-center">
+                <div class="card" style="height: 20em; width: 15em">
+                    <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
+                        <img src="./sources/images/question-mark.png" alt="question-mark">
+                    </div>
+                </div>
+            </div>
+            <div class="col d-flex justify-content-center">
+                <div class="card" style="height: 20em; width: 15em">
+                    <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
+                        <img src="./sources/images/question-mark.png" alt="question-mark">
+                    </div>
+                </div>
+            </div>
+            <div class="col d-flex justify-content-center">
+                <div class="card" style="height: 20em; width: 15em">
+                    <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
+                        <img src="./sources/images/question-mark.png" alt="question-mark">
+                    </div>
+                </div>
             </div>
         </div>
     </main>
 
     <!-- modal -->
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+    <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
         Launch static backdrop modal
-    </button>
+    </button> -->
 
     <!-- Modal -->
     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
@@ -85,9 +127,9 @@
                     <p>Flip two cards at a time to find matching pairs, match all pairs to win!</p>
                     <h3>Select Level:</h3>
                     <div class="d-flex gap-3 justify-content-evenly mt-4">
-                        <button type="button" class="btn p-3 text-light fw-bold" data-bs-dismiss="modal" style="width: 25%; background: #538D4E;">Close</button>
-                        <button type="button" class="btn p-3 text-light fw-bold" style="width: 25%; background: #F5B400;">Understood</button>
-                        <button type="button" class="btn p-3 text-light fw-bold" style="width: 25%; background: #DE0C0C;">Understood</button>
+                        <button type="button" class="btn p-3 text-light fw-bold difficulty" data-bs-dismiss="modal" style="width: 25%; background: #538D4E;" id="easy">easy</button>
+                        <button type="button" class="btn p-3 text-light fw-bold difficulty" data-bs-dismiss="modal" style="width: 25%; background: #F5B400;" id="medium">medium</button>
+                        <button type="button" class="btn p-3 text-light fw-bold difficulty" data-bs-dismiss="modal" style="width: 25%; background: #DE0C0C;" id="hard">hard</button>
                     </div>
                 </div>
             </div>
@@ -97,6 +139,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="/main.js"></script>
 </body>
 
 </html>
