fixed card difficulty layout (for now, not very responsive tho), reveal and hide cards done. problem with identifying which card was selected tho

--- a/index.html
+++ b/index.html
@@ -65,46 +65,46 @@
     <main class="container-md py-5" id="card-container">
         <div class="row mb-5">
             <div class="col d-flex justify-content-center">
-                <div class="card" style="height: 20em; width: 15em">
-                    <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
-                        <img src="./sources/images/question-mark.png" alt="question-mark">
+                <div class="card" style="height: 20em; width: 15em; background-color: #818384;">
+                    <div class="card-body d-flex justify-content-center align-items-center" style="">
+                        <img src="./sources/images/question-mark.png" class="card-icon" alt="question-mark">
                     </div>
                 </div>
             </div>
             <div class="col d-flex justify-content-center">
-                <div class="card" style="height: 20em; width: 15em">
-                    <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
-                        <img src="./sources/images/question-mark.png" alt="question-mark">
+                <div class="card" style="height: 20em; width: 15em; background-color: #818384;">
+                    <div class="card-body d-flex justify-content-center align-items-center" style="">
+                        <img src="./sources/images/question-mark.png" class="card-icon" alt="question-mark">
                     </div>
                 </div>
             </div>
             <div class="col d-flex justify-content-center">
-                <div class="card" style="height: 20em; width: 15em">
-                    <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
-                        <img src="./sources/images/question-mark.png" alt="question-mark">
+                <div class="card" style="height: 20em; width: 15em; background-color: #818384;">
+                    <div class="card-body d-flex justify-content-center align-items-center" style="">
+                        <img src="./sources/images/question-mark.png" class="card-icon" alt="question-mark">
                     </div>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col d-flex justify-content-center">
-                <div class="card" style="height: 20em; width: 15em">
-                    <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
-                        <img src="./sources/images/question-mark.png" alt="question-mark">
+                <div class="card" style="height: 20em; width: 15em; background-color: #818384;">
+                    <div class="card-body d-flex justify-content-center align-items-center" style="">
+                        <img src="./sources/images/question-mark.png" class="card-icon" alt="question-mark">
                     </div>
                 </div>
             </div>
             <div class="col d-flex justify-content-center">
-                <div class="card" style="height: 20em; width: 15em">
-                    <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
-                        <img src="./sources/images/question-mark.png" alt="question-mark">
+                <div class="card" style="height: 20em; width: 15em; background-color: #818384;">
+                    <div class="card-body d-flex justify-content-center align-items-center" style="">
+                        <img src="./sources/images/question-mark.png" class="card-icon" alt="question-mark">
                     </div>
                 </div>
             </div>
             <div class="col d-flex justify-content-center">
-                <div class="card" style="height: 20em; width: 15em">
-                    <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
-                        <img src="./sources/images/question-mark.png" alt="question-mark">
+                <div class="card" style="height: 20em; width: 15em; background-color: #818384;">
+                    <div class="card-body d-flex justify-content-center align-items-center" style="">
+                        <img src="./sources/images/question-mark.png" class="card-icon" alt="question-mark">
                     </div>
                 </div>
             </div>
