--- a/index.html
+++ b/index.html
@@ -11,59 +11,10 @@
 </head>
 
 <body>
-    <!-- card container -->
-    <!-- <main class="container d-flex justify-content-evenly align-items-center flex-wrap gap-5 bg-danger p-5 mt-5"
-         id="card-container">
-        mobile landscape
-        <div class="card ">
-            <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
-                <img src="./sources/images/question-mark.png" alt="question-mark">
-            </div>
-        </div>
-        <div class="card" style="height: 20em; width: 15em">
-            <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
-                <img src="./sources/images/question-mark.png" alt="question-mark">
-            </div>
-        </div>
-        <div class="card" style="height: 20em; width: 15em">
-            <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
-                <img src="./sources/images/question-mark.png" alt="question-mark">
-            </div>
-        </div>
-        <div class="card" style="height: 20em; width: 15em">
-            <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
-                <img src="./sources/images/question-mark.png" alt="question-mark">
-            </div>
-        </div>
-        <div class="card" style="height: 20em; width: 15em">
-            <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
-                <img src="./sources/images/question-mark.png" alt="question-mark">
-            </div>
-        </div>
-        <div class="card" style="height: 20em; width: 15em">
-            <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
-                <img src="./sources/images/question-mark.png" alt="question-mark">
-            </div>
-        </div>
-        <div class="card" style="height: 20em; width: 15em">
-            <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
-                <img src="./sources/images/question-mark.png" alt="question-mark">
-            </div>
-        </div>
-        <div class="card" style="height: 20em; width: 15em">
-            <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
-                <img src="./sources/images/question-mark.png" alt="question-mark">
-            </div>
-        </div>
-        <div class="card" style="height: 20em; width: 15em">
-            <div class="card-body d-flex justify-content-center align-items-center" style="background-color: #818384;">
-                <img src="./sources/images/question-mark.png" alt="question-mark">
-            </div>
-        </div>
-    </main> -->
 
+    <!-- card container -->
     <main class="container-md py-5" id="card-container">
-        <div class="row mb-5">
+        <div class="row mb-5" id="row1">
             <div class="col d-flex justify-content-center">
                 <div class="card" style="height: 20em; width: 15em; background-color: #818384;">
                     <div class="card-body d-flex justify-content-center align-items-center" style="">
@@ -86,7 +37,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" id="row2">
             <div class="col d-flex justify-content-center">
                 <div class="card" style="height: 20em; width: 15em; background-color: #818384;">
                     <div class="card-body d-flex justify-content-center align-items-center" style="">
@@ -139,7 +90,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="/main.js"></script>
+    <script src="/main.js"></script> 
 </body>
 
 </html>
