--- a/index.html
+++ b/index.html
@@ -13,51 +13,70 @@
 <body>
 
     <!-- card container -->
-    <main class="container-md py-5" id="card-container">
+    <main class="container-md py-5 d-flex flex-column justify-content-center" style="height: 100vh;"
+        id="card-container">
         <div class="row mb-5" id="row1">
             <div class="col d-flex justify-content-center">
-                <div class="card" style="height: 20em; width: 15em; background-color: #818384;">
-                    <div class="card-body d-flex justify-content-center align-items-center" style="">
-                        <img src="./sources/images/question-mark.png" class="card-icon" alt="question-mark">
+                <button class="card"
+                    style="height: 15vw; width: 12vw; max-width: 200px; max-height: 300px; background-color: #818384;"
+                    id="card${i}">
+                    <div class="card-body d-flex justify-content-center align-items-center">
+                        <img src="./sources/images/question-mark.png" class="card-icon" alt="question-mark"
+                            id="icon${i}" style="max-width: 80%; height: auto;">
                     </div>
-                </div>
+                </button>
             </div>
             <div class="col d-flex justify-content-center">
-                <div class="card" style="height: 20em; width: 15em; background-color: #818384;">
-                    <div class="card-body d-flex justify-content-center align-items-center" style="">
-                        <img src="./sources/images/question-mark.png" class="card-icon" alt="question-mark">
+                <button class="card"
+                    style="height: 15vw; width: 12vw; max-width: 200px; max-height: 300px; background-color: #818384;"
+                    id="card${i}">
+                    <div class="card-body d-flex justify-content-center align-items-center">
+                        <img src="./sources/images/question-mark.png" class="card-icon" alt="question-mark"
+                            id="icon${i}" style="max-width: 80%; height: auto;">
                     </div>
-                </div>
+                </button>
             </div>
             <div class="col d-flex justify-content-center">
-                <div class="card" style="height: 20em; width: 15em; background-color: #818384;">
-                    <div class="card-body d-flex justify-content-center align-items-center" style="">
-                        <img src="./sources/images/question-mark.png" class="card-icon" alt="question-mark">
+                <button class="card"
+                    style="height: 15vw; width: 12vw; max-width: 200px; max-height: 300px; background-color: #818384;"
+                    id="card${i}">
+                    <div class="card-body d-flex justify-content-center align-items-center">
+                        <img src="./sources/images/question-mark.png" class="card-icon" alt="question-mark"
+                            id="icon${i}" style="max-width: 80%; height: auto;">
                     </div>
-                </div>
+                </button>
             </div>
         </div>
         <div class="row" id="row2">
             <div class="col d-flex justify-content-center">
-                <div class="card" style="height: 20em; width: 15em; background-color: #818384;">
-                    <div class="card-body d-flex justify-content-center align-items-center" style="">
-                        <img src="./sources/images/question-mark.png" class="card-icon" alt="question-mark">
+                <button class="card"
+                    style="height: 15vw; width: 12vw; max-width: 200px; max-height: 300px; background-color: #818384;"
+                    id="card${i}">
+                    <div class="card-body d-flex justify-content-center align-items-center">
+                        <img src="./sources/images/question-mark.png" class="card-icon" alt="question-mark"
+                            id="icon${i}" style="max-width: 80%; height: auto;">
                     </div>
-                </div>
+                </button>
             </div>
             <div class="col d-flex justify-content-center">
-                <div class="card" style="height: 20em; width: 15em; background-color: #818384;">
-                    <div class="card-body d-flex justify-content-center align-items-center" style="">
-                        <img src="./sources/images/question-mark.png" class="card-icon" alt="question-mark">
+                <button class="card"
+                    style="height: 15vw; width: 12vw; max-width: 200px; max-height: 300px; background-color: #818384;"
+                    id="card${i}">
+                    <div class="card-body d-flex justify-content-center align-items-center">
+                        <img src="./sources/images/question-mark.png" class="card-icon" alt="question-mark"
+                            id="icon${i}" style="max-width: 80%; height: auto;">
                     </div>
-                </div>
+                </button>
             </div>
             <div class="col d-flex justify-content-center">
-                <div class="card" style="height: 20em; width: 15em; background-color: #818384;">
-                    <div class="card-body d-flex justify-content-center align-items-center" style="">
-                        <img src="./sources/images/question-mark.png" class="card-icon" alt="question-mark">
+                <button class="card"
+                    style="height: 15vw; width: 12vw; max-width: 200px; max-height: 300px; background-color: #818384;"
+                    id="card${i}">
+                    <div class="card-body d-flex justify-content-center align-items-center">
+                        <img src="./sources/images/question-mark.png" class="card-icon" alt="question-mark"
+                            id="icon${i}" style="max-width: 80%; height: auto;">
                     </div>
-                </div>
+                </button>
             </div>
         </div>
     </main>
@@ -78,9 +97,12 @@
                     <p>Flip two cards at a time to find matching pairs, match all pairs to win!</p>
                     <h3>Select Level:</h3>
                     <div class="d-flex gap-3 justify-content-evenly mt-4">
-                        <button type="button" class="btn p-3 text-light fw-bold difficulty" data-bs-dismiss="modal" style="width: 25%; background: #538D4E;" id="easy">easy</button>
-                        <button type="button" class="btn p-3 text-light fw-bold difficulty" data-bs-dismiss="modal" style="width: 25%; background: #F5B400;" id="medium">medium</button>
-                        <button type="button" class="btn p-3 text-light fw-bold difficulty" data-bs-dismiss="modal" style="width: 25%; background: #DE0C0C;" id="hard">hard</button>
+                        <button type="button" class="btn p-3 text-light fw-bold difficulty" data-bs-dismiss="modal"
+                            style="width: 25%; background: #538D4E;" id="easy">easy</button>
+                        <button type="button" class="btn p-3 text-light fw-bold difficulty" data-bs-dismiss="modal"
+                            style="width: 25%; background: #F5B400;" id="medium">medium</button>
+                        <button type="button" class="btn p-3 text-light fw-bold difficulty" data-bs-dismiss="modal"
+                            style="width: 25%; background: #DE0C0C;" id="hard">hard</button>
                     </div>
                 </div>
             </div>
@@ -94,31 +116,55 @@
                 <div class="modal-body p-5 text-dark">
                     <h1>Shuffiling Cards</h1>
                     <p>Test your luck and pick the same card!</p>
-                    <button type="button" class="btn-close d-none" id="closeShuffleModal" data-bs-dismiss="modal"></button>
+                    <button type="button" class="btn-close d-none" id="closeShuffleModal"
+                        data-bs-dismiss="modal"></button>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="modal fade" id="endGameModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-    aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-xl">
-        <div class="modal-content" id="instructions">
-            <div class="modal-body px-5 pt-5 text-dark text-center pb-0 mb-0">
-                <h1>Game Over!</h1>
-                <p id="gameScore"></p>
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-xl">
+            <div class="modal-content" id="instructions">
+                <div class="modal-body px-5 pt-5 text-dark text-center pb-0 mb-0">
+                    <h1>Game Over!</h1>
+                    <p id="gameScore"></p>
+                </div>
+                <div class="modal-footer d-flex justify-content-center align-items-center py-3">
+                    <button type="button" class="btn btn-warning p-3" id="playAgain" data-bs-dismiss="modal">Play
+                        Again!</button>
+                </div>
             </div>
-            <div class="modal-footer d-flex justify-content-center align-items-center py-3">
-                <button type="button" class="btn btn-warning" id="playAgain" data-bs-dismiss="modal">Play Again!</button>
-              </div>
         </div>
     </div>
-</div>
+
+    <div class="modal fade" id="resizeModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-xl">
+            <div class="modal-content" id="instructions">
+                <div class="modal-body p-5 text-dark d-flex flex-column justify-content-center align-items-center text-center">
+                    <img src="/sources/images/rotate_90_degrees_cw_23dp_F5B400_FILL0_wght400_GRAD0_opsz24.svg" alt="rotate"
+                    style="height: auto; width: 15vw;" class="m-3">
+                    <p>For better experience, please rotate your device to landscape mode. 😊</p>
+                    <button type="button" class="btn-close d-none" id="closeResizeModal"
+                        data-bs-dismiss="modal"></button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- alert -->
+    <!-- <div id="landscapeMessage" class="alert alert-light text-center d-none">
+        <img src="/sources/images/rotate_90_degrees_cw_23dp_F5B400_FILL0_wght400_GRAD0_opsz24.svg" alt="rotate"
+            style="height: auto; width: 15vw;" class="m-3">
+        <p>For better experience, please rotate your device to landscape mode. 😊</p>
+    </div> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="/main.js"></script> 
+    <script src="/main.js"></script>
 </body>
 
 </html>
